--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "__hash_table": "c",
         "locale": "c",
-        "memory": "c"
+        "memory": "c",
+        "array": "c",
+        "string": "c",
+        "string_view": "c"
     }
 }
