--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
         "type": "cppdbg",
         "request": "launch",
         "program": "${workspaceFolder}/push_swap",
-        "args": ["5", "1", "2", "4", "0"],
+        "args": ["4", "2", "1", "5"],
         "stopAtEntry": true,
         "cwd": "${fileDirname}",
         "environment": [],
