--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
         "type": "cppdbg",
         "request": "launch",
         "program": "${workspaceFolder}/push_swap",
-        "args": ["9", "6", "0", "1", "2"],
+        "args": ["1", "8", "3", "9", "0", "2"],
         "stopAtEntry": true,
         "cwd": "${fileDirname}",
         "environment": [],
